[package]
name = "realcugan-rs"
version = "1.0.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
image = { version = "0.25.2", default-features = false, features = ["webp", "png", "jpeg"]}
libc = "0.2.158"

[build-dependencies]
cmake = "^0.1.48"

[profile.release]
lto = true
opt-level = 3
strip = "debuginfo"
panic = "abort"
incremental = false

[features]
models = ["models-se", "models-pro", "models-nose"]
models-se = []
models-pro = []
models-nose = []